# gl-game-engine

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/source/: ENG.h  Engine.cpp  Engine.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h
engine/source/input/: InputManager.cpp
engine/source/render/: Material.cpp  Material.h  Mesh.cpp
source/: Game.cpp  Game.h  main.cpp
